--- a/package.json
+++ b/package.json
@@ -15,12 +15,18 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
     "mongodb": "^3.1.10",
-    "mongoose": "^5.3.13"
+    "mongoose": "^5.3.13",
+    "validator": "^10.10.0"
   },
   "devDependencies": {
+    "eslint": "^5.11.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
     "expect": "^23.6.0",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.6",
